Fix Cannot GET / issue and add uncaught/async error handlers
